--- a/styles/globals.css
+++ b/styles/globals.css
@@ -112,7 +112,7 @@
 body {
   cursor: none;
 }
-.cursor {
+/* .cursor {
   width: 1.2rem;
   height: 1.2rem;
   border-radius: 50%;
@@ -126,6 +126,44 @@ body {
   backdrop-filter: sepia(20%);
   background-size: cover;
   background-color: #570083b9;
+} */
+
+/* ======================================== */
+.cursor {
+  position: fixed;
+  background-color: #570083b9;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  z-index: 100000;
+  transition: 0.3s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+    0.2s cubic-bezier(0.75, -0.27, 0.3, 2.33) opacity;
+  user-select: none;
+  pointer-events: none;
+  transform: scale(1);
+}
+.cursor.active {
+  opacity: 1;
+  transform: scale(0);
+}
+.cursor-follower {
+  position: fixed;
+  border: 1px solid #570083b9;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  z-index: 100000;
+  transition: 0.6s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+    0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
+    0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) background;
+  user-select: none;
+  pointer-events: none;
+  transform: translate(2px, 2px);
+}
+.cursor-follower.active {
+  opacity: 1;
+  transform: scale(2);
+  border: 1px solid #003ae9;
 }
 
 /* tsparticles */
